<resources>
    <string name="application">application</string>
    <string name="app_name">shoppingList</string>
    <string name="add_dialog_title">Add new item to shopping list</string>
    <string name="clear_all">Clear all</string>
    <string name="clear_purchased">Clear all purchased items</string>
    <string name="card_example">Card example</string>
    <string name="cancel">Cancel</string>
    <string name="dark_theme">Set dark theme</string>
    <string name="date_example">21.12.1983</string>
    <string name="delete_btn">delete</string>
    <string name="destination_settings">Settings</string>
    <string name="edit_dialog_title">edit the item description</string>
    <string name="List">LIST</string>
    <string name="light_theme">Set light theme</string>
    <string name="main_logo">MainLogo</string>
    <string name="new_card">Add shoppingCard</string>
    <string name="not_saved">Couldn\`t save</string>
    <string name="no_card">No shoppingCard</string>
    <string name="purchased_list">Purchased list</string>
    <string name="purchased_delete_description">This will remove all purchased items from your account</string>
    <string name="save">save</string>
    <string name="saved">saved</string>
    <string name="shopping">shopping</string>
    <string name="shopping_list">Shopping list</string>
    <string name="status_line">status line</string>
    <string name="update">Update</string>
    <string name="updated">updated</string>
    <string name="update_card">Update shoppingCard</string>
</resources>
