<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <EditText
            android:id="@+id/updateCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/update_card" />
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="updateNote"
                android:text="@string/update" />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="cancelUpdate"
                android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>