<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:layout_margin="0dp">
    <EditText
            android:id="@+id/update_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16dp"
            android:inputType="text"
            android:hint="@string/update_card"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="Autofill"/>

    <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cancelUpdate"
            android:text="@string/cancel"
            android:layout_margin="@dimen/margin_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/update_card"
            app:layout_constraintEnd_toStartOf="@id/update_btn"
            app:layout_constraintHorizontal_chainStyle="packed"/>

    <Button
            android:id="@+id/update_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="updateNote"
            android:text="@string/update"
            android:layout_marginTop="@dimen/margin_16dp"
            app:layout_constraintStart_toEndOf="@id/cancel_btn"
            app:layout_constraintTop_toBottomOf="@id/update_card"
            app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>