<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/settings_title_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/application"
            android:textSize="@dimen/text_24sp"
            android:textAlignment="textStart"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginBottom="@dimen/margin_8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/settings_title_second"
            app:layout_constraintBottom_toBottomOf="@id/settings_title_second"/>

    <TextView
            android:id="@+id/settings_title_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination_settings"
            android:textSize="@dimen/text_54sp"
            android:textAlignment="textEnd"
            android:layout_marginEnd="@dimen/margin_16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
            android:id="@+id/settings_fragment__theme_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_title_second">
        <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/settings_fragment__light_theme_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16dp"
                android:checked="true"
                android:text="@string/light_theme"
                android:textSize="@dimen/text_20sp"
                app:layout_constraintStart_toStartOf="@id/settings_title_second"
                app:layout_constraintTop_toBottomOf="@id/settings_title_second"
                app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/settings_fragment__database_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_fragment__theme_card">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16dp">
            <TextView
                    android:id="@+id/settings_fragment__database_purchased_card_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_purchased"
                    android:textSize="@dimen/text_20sp"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    android:id="@+id/settings_fragment__database_purchased_card_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_16dp"
                    android:text="@string/purchased_delete_description"
                    android:textSize="@dimen/text_14sp"
                    app:layout_constraintTop_toBottomOf="@id/settings_fragment__database_purchased_card_text_view"
                    app:layout_constraintStart_toEndOf="@id/settings_fragment__database_card_clear_purchased_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
            />
            <Button
                    android:id="@+id/settings_fragment__database_card_clear_purchased_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:text="@string/delete_btn"
                    android:background="@color/buttonColor"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/settings_fragment__database_purchased_card_text_view"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>